Warn mentors not to require applicants to have contributed to their community previously

--- a/home/templates/home/project_skills_form.html
+++ b/home/templates/home/project_skills_form.html
@@ -48,6 +48,13 @@ on their educational background. If your project requires knowledge that would
 normally be learned during a degree, your project contribution tasks should
 test applicants for that knowledge.</p>
 
+<p><b>Please do NOT require or prefer applicants that have previously
+contributed to your community.</b> Each Outreachy applicant must have a fair
+chance to be selected as your intern. Requiring applicants to have contributed
+to your community means you are limiting opportunities for people who have not
+networked with your community. It also means your applicant pool will
+reflect whatever diversity (or lack thereof) your community already has.</p>
+
 <p><form action="" method="post">
 	{% csrf_token %}
 	{{ form.management_form }}
