--- a/home/templates/home/project_skills_form.html
+++ b/home/templates/home/project_skills_form.html
@@ -142,5 +142,21 @@ reflect whatever diversity (or lack thereof) your community already has.</p>
 <p>If you need to add more skills than there are fields, you should save this
 internship project proposal and then click 'Edit Project information'.</p>
 
+{% endblock %}
 
+{% block extra_css %}
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+{% endblock %}
+
+{% block extra_js %}
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script>
+		$(function() {
+			var suggested_skills = {{ suggested_skills }};
+			$("#id_projectskill_set-0-skill").autocomplete({
+				source: suggested_skills
+			});
+		});
+	</script>
 {% endblock %}
