Fix missing HTML tag

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -20,7 +20,7 @@
 
 <h2>Additional Information to Provide</h2>
 
-<p>The initial application also includes four essay questions. Please <a href='{% url 'docs-applicant' %}#essay-questions'>read our essay tips carefully.</p>
+<p>The initial application also includes four essay questions. Please <a href='{% url 'docs-applicant' %}#essay-questions'>read our essay tips carefully.</a></p>
 
 <h2>Intern Agreements and Forms</h2>
 
