Update initial application questions
Remove question on the initial application "What barriers or concerns
have kept you from contributing to free and open source software?" This
question is rarely insightful, and applicants mostly share the same
answers ("I don't know where to start", "It was too hard to set up the
project", and "No one answered my questions").

Add two new questions to the essay page:

 - What country will they be living in during the internship period?

 - Are you part of an underrepresented group (in the technology industry
   of the country listed above)? How are you underrepresented?

Update the following pages to talk about the new initial application
questions:

 - /apply/eligibility/ - eligibility summary page
 - applicant guide
 - privacy policy

Update eligibility test for modified fields.

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -124,22 +124,50 @@ Applicant Guide | Outreachy Documentation
 	<li>If you are a self-employed contractor: The average number of invoiced hours over the past six months</li>
 </ul>
 
-<p id='essay-questions'><b>Essay questions</b></p>
+<h2 id='essay-questions'>Essay questions</h2>
 
-<p>The initial application includes four essay questions:</li>
+<p>The initial application includes four essay questions:</p>
 
 <ol>
-	<li><b>Does your learning environment have few people who share your identity or background? Please provide details.</b> Contributing to free and open source software takes some skill. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. Does any of your learning environments have few people who share your identity or background? How did your identity or background differ from the majority of people in this learning environment? Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+	<li><p><b>What country will you be living in from {{ current_round.internstarts|date:"F d, Y" }} to {{ current_round.internends|date:"F d, Y" }}?</b> If you will be living in multiple countries, list the country you will spend the most time in.</p></li>
 
-	<li><b>What systemic bias or discrimination have you faced while building your skills?</b> Outreachy projects often require applicants to know some basic skills. Those skills might include programming, user experience, documentation, illustration and graphical design, or data science. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. In these settings, have you faced systemic bias or discrimination? Have you been discouraged from accessing these resources because of your identity or background? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+	<li><p><b>Are you part of an underrepresented group (in the technology industry of the country listed above)? How are you underrepresented?</b></p>
+					<p>
+					Think about the technology industry in the country listed above.
+					</p>
+					<p>
+					Are there few people who share your identity or background in that technology industry?
+					</p>
+					<p>
+					Please tell us which underrepresented groups you are a part of.
+					You may want to consider your:
+					</p>
 
-	<li><b>What systemic bias or discrimination would you face if you applied for a job in the technology industry of your country?</b> Think about when you have applied for a job in the technology industry of your country. Do you think you have faced discrimination on the basis of your background or identity? If you have not applied for a job yet, do you think you may be discriminated against on the basis of your background or identity? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+					<p><ul>
+						<li>age</li>
+						<li>body size</li>
+						<li>caste</li>
+						<li>disabilities</li>
+						<li>ethnicity</li>
+						<li>gender identity and expression</li>
+						<li>socio-economic status</li>
+						<li>nationality</li>
+						<li>personal appearance</li>
+						<li>race</li>
+						<li>religion</li>
+						<li>sexual identity and orientation</li>
+					</ul></p>
+	</li>
 
-	<li><b>What barriers or concerns have kept you from contributing to free and open source software?</b> Please provide specific examples. Outreachy organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+	<li><p><b>What systemic bias or discrimination would you face if you applied for a job in the technology industry of your country?</b> Think about when you have applied for a job in the technology industry of your country. Do you think you have faced discrimination on the basis of your background or identity? If you have not applied for a job yet, do you think you may be discriminated against on the basis of your background or identity? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</p></li>
+
+	<li><p><b>Does your learning environment have few people who share your identity or background? Please provide details.</b> Contributing to free and open source software takes some skill. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. Does any of your learning environments have few people who share your identity or background? How did your identity or background differ from the majority of people in this learning environment? Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</p></li>
+
+	<li><p><b>What systemic bias or discrimination have you faced while building your skills?</b> Outreachy projects often require applicants to know some basic skills. Those skills might include programming, user experience, documentation, illustration and graphical design, or data science. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. In these settings, have you faced systemic bias or discrimination? Have you been discouraged from accessing these resources because of your identity or background? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</p></li>
 
 </ol>
 
-<p id='essay-tips'><b>Essay Tips</b></p>
+<h3 id='essay-tips'>Essay tips</h3>
 
 {% include 'home/docs/essay-tips-snippet.html' %}
 
