Remove mentor feedback termination reason textfield
This was the only use of Wagtail's RichTextField outside of a Wagtail
page, and it apparently never worked as anything but a plain TextField.
So it needed to get fixed somehow.

But also literally nobody has ever entered anything meaningful in this
field, so Sage says let's just delete it.

--- a/home/templates/home/final_feedback.html
+++ b/home/templates/home/final_feedback.html
@@ -29,7 +29,7 @@ Final Feedback for current_round.official_name
 					</td>
 					<td>Feedback status</td>
 				</tr>
-				{% if final_mentor_status == i.TERMINATE %}<tr><td colspan="3">Mentor's stated reasons for termination:<br><p>{{ i.finalmentorfeedback.termination_reason }}</p></td></tr>{% endif %}
+				{% if final_mentor_status == i.TERMINATE %}<tr><td colspan="3">Mentor wishes to terminate internship</td></tr>{% endif %}
 				{% if final_mentor_status != i.MISSING or final_intern_status != i.MISSING %}
 					<tr><td colspan="3"><b>Mentor support</b></td></tr>
 					<tr>
