--- a/home/templates/home/midpoint_feedback.html
+++ b/home/templates/home/midpoint_feedback.html
@@ -29,7 +29,7 @@ Midpoint Feedback for {{ current_round.official_name }}
 					</td>
 					<td>Feedback status</td>
 				</tr>
-				{% if midpoint_mentor_status == i.TERMINATE %}<tr><td colspan="3">Mentor's stated reasons for termination:<br><p>{{ i.midpointmentorfeedback.termination_reason }}</p></td></tr>{% endif %}
+				{% if midpoint_mentor_status == i.TERMINATE %}<tr><td colspan="3">Mentor wishes to terminate internship</td></tr>{% endif %}
 				{% if midpoint_mentor_status != i.MISSING or midpoint_intern_status != i.MISSING %}
 					<tr><td colspan="3"><b>Mentor support</b></td></tr>
 					<tr>
