Update essay tips with average character length from accepted applications in prior rounds

--- a/home/templates/home/docs/essay-tips-snippet.html
+++ b/home/templates/home/docs/essay-tips-snippet.html
@@ -4,7 +4,7 @@ Make sure to review the help text below the question.
 </p>
 
 <p>
-Good essay answers have at least 2 to 3 sentences.
+On average, applicants who are accepted write 500 to 900 characters per essay question.
 We prefer essays with detailed examples or stories from your life.
 </p>
 
