--- a/home/templates/home/barrierstoparticipation_form.html
+++ b/home/templates/home/barrierstoparticipation_form.html
@@ -24,7 +24,7 @@ Update Your Essay Questions
 			</p>
 			<p>
 			In some cases, you may need to provide more details.
-			Good essay answers have at least 2 to 3 sentences.
+			On average, applicants who are accepted write 500 to 900 characters per essay question.
 			We prefer essays with detailed examples or stories from your life.
 			</p>
 		</div>
