Add JavaScript for country selector in initial application essays
In the initial application on the essay page, we ask applicants to fill
out what country they will be living in during the internship.

Add JavaScript to show a drop down of country names in English, along
with the country flag and the name commonly used in that country's
majority language.

Add a hidden field for the ISO 3166-1 alpha-2 country code. The hidden
field is automatically filled in by the country-select-js JavaScript
when a country is selected.

Make sure the new hidden field is allowed to be blank. That will allow
people who have JavaScript turned off to complete the form.

The country code will allow easier filter students who are ineligible
for particular rounds based on which hemisphere their country is in.

This commit adds CSS, JavaScript, and flag images from the
country-select-js repository:

https://github.com/mrmarkfrench/country-select-js

The commit that I cloned from was
2eb2b299d172278868e74fd15c92d68ff3d60239 "Merge pull request #73 from
mrmarkfrench/dependabot/npm_and_yarn/fstream-1.0.12" from June 6, 2020.

The CSS and JavaScript are under an MIT license:

https://github.com/mrmarkfrench/country-select-js#attributions

The flag images are from this repository:

https://github.com/behdad/region-flags

According the repo, the flag images are public domain images from Wikipedia:

https://github.com/behdad/region-flags/blob/gh-pages/COPYING

--- a/home/templates/home/eligibility_wizard_essay_questions.html
+++ b/home/templates/home/eligibility_wizard_essay_questions.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load static %}
+{% load compress %}
 
 {% block title %}
 Outreachy Initial Application
@@ -45,6 +47,9 @@ It will not be shared with mentors, coordinators, or other applicants.
 <form action="" method="post">{% csrf_token %}
 	{{ wizard.form.media }}
 	{{ wizard.management_form }}
+	{% for field in wizard.form.hidden_fields %}
+			{{ field }}
+	{% endfor %}
 	{% for field in wizard.form.visible_fields %}
 		{% if 'living in during the internship' in field.label_tag %}
 			<div class="form-group card">
@@ -211,4 +216,20 @@ It will not be shared with mentors, coordinators, or other applicants.
 <input type="submit" class="btn btn-primary" value="Next step"/>
 </form>
 
+{% endblock %}
+
+{% block extra_css %}
+	<link rel="stylesheet" href="{% static 'css/countrySelect.css' %}">
+	<style>.country-select .flag {background-image: url({% static "img/flags.png" %});}</style>
+{% endblock %}
+
+{% block extra_js %}
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="{% static 'js/countrySelect.js' %}"></script>
+	<script>
+		$("#id_Barriers-to-Participation-country_living_in_during_internship").countrySelect({
+			defaultCountry: "",
+			preferredCountries: ['al', 'ar', 'au', 'br', 'cm', 'ca', 'eg', 'fr', 'de', 'gr', 'gh', 'in', 'it', 'kz', 'ke', 'mg', 'mx', 'nz', 'ng', 'pk', 'ps', 'ru', 'es', 'ug', 'gb', 'ua', 'us']
+		});
+	</script>
 {% endblock %}
