Remove Recurse Center entry from Opportunities page

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -8,20 +8,23 @@ Outreachy | Opportunities with Sponsors - Outreachy
 
 <div class="container">
     <div class="block-paragraph">
-        <div class="rich-text"><p>Are you looking for a full-time position working on open source? Outreachy's sponsors may have a job opening for you!</p><p>The following organizations and companies that sponsor Outreachy offer their own internships and full-time opportunities. Next to each organization or company is the Outreachy communities that organization sponsors. Please note that organizations may not have job openings related to those communities at this point in time.</p><p>The bottom of the page is links to lists of other tech internship programs that you may be interested in.</p>
+        <div class="rich-text">
+            <h1>Opportunities</h1>
+            <p>Are you looking for a full-time position working on open source? Outreachy's sponsors may have a job opening for you!</p>
+            <p>The following organizations and companies that sponsor Outreachy offer their own internships and full-time opportunities. Next to each organization or company is the Outreachy communities that organization sponsors. Please note that organizations may not have job openings related to those communities at this point in time.</p><p>The bottom of the page is links to lists of other tech internship programs that you may be interested in.</p>
             <h3>40 or more</h3>
             <ul>
                 <li><p><a href="https://www.google.com/about/jobs/search/#j=open%20source">Google</a>  </p></li>
                 <li><p><a href="http://careers.mozilla.org">Mozilla</a>  </p></li>
                 <li><p><a href="http://jobs.redhat.com">Red Hat</a> (Ceph, Gluster, Fedora, Foreman, GNOME, JBoss, Linux kernel, OpenShift, OpenStack, oVirt, QEMU jobs)  </p></li>
             </ul>
-            <p></p>
+
             <h3>20-39</h3>
             <ul>
                 <li><p>Intel <a href="https://01.org/about/jobs">Open Source Technology Center</a> and <a href="http://www.intel.com/jobs">company-wide</a> (Linux kernel, OpenStack, Yocto Project jobs)  </p></li>
                 <li><p><a href="https://wikimediafoundation.org/wiki/Job_openings">Wikimedia</a>  </p></li>
             </ul>
-            <p></p>
+
             <h3>10-19</h3>
             <ul>
                 <li><p><a href="http://jobs.bloomberg.com/search?q=open+source">Bloomberg</a>  </p></li>
@@ -31,7 +34,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="https://www.newamerica.org/jobs/">Open Technology Institute</a> (Commotion and M-Lab jobs)  </p></li>
                 <li><p><a href="http://www.openstack.org/community/jobs">OpenStack Foundation</a>  </p></li>
             </ul>
-            <p></p>
+
             <h3>5-9</h3>
             <ul>
                 <li><p><a href="http://www.collabora.com/about/vacancies">Collabora</a> (Linux kernel, QEMU jobs)  </p></li>
@@ -39,7 +42,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://www.fsf.org/resources/jobs">FOSS jobs board maintained by the Free Software Foundation</a> (MediaGoblin, FSF jobs would appear here)  </p></li>
                 <li><p><a href="http://www.xenproject.org/about/join.html">Xen Project's advisory board</a>  </p></li>
             </ul>
-            <p></p>
+
             <h3>3-4</h3>
             <ul>
                 <li><p><a href="http://cadasta.org/about-us/careers/">Cadasta</a>  </p></li>
@@ -56,7 +59,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="https://www.yoctoproject.org/ecosystem">Yocto Project's ecosystem</a>  </p></li>
                 <li><p><a href="https://zulip.org/contribute.html">Zulip page on contributing</a>  </p></li>
             </ul>
-            <p></p>
+
             <h3>2</h3>
             <ul>
                 <li><p><a href="https://www.digitalocean.com/company/careers/">DigitalOcean</a>  </p></li>
@@ -68,7 +71,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p>Python Software Foundation's <a href="http://www.python.org/psf/members/#sponsor-members">sponsor members</a> and <a href="http://www.python.org/newjobs/">jobs board</a>   </p></li>
                 <li><p><a href="https://www.torproject.org/about/jobs.html.en">Tor</a> and <a href="https://www.eff.org/about/opportunities">Electronic Frontier Foundation</a>  </p></li>
             </ul>
-            <p></p>
+
             <h3>1</h3>
             <ul>
                 <li><p><a href="http://jobs.akamai.com/search/?q=open+source">Akamai</a>  </p></li>
@@ -96,11 +99,10 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://www.videolan.org/contact.html">VideoLAN</a>  </p></li>
                 <li><p><a href="http://www.x.org/wiki/BoardOfDirectors/">X.Org</a>'s board member affiliations  </p></li>
             </ul>
-            <p></p>
+
             <h2>More opportunities</h2>
             <ul>
                 <li><p><a href="https://developers.google.com/open-source/gsoc/">Google Summer of Code</a> </p></li>
-                <li><p><a href="https://www.recurse.com/">The Recurse Center</a> </p></li>
                 <li><p><a href="http://www.fossjobs.net">FOSS jobs board maintained by Moritz Bartl</a> </p></li>
                 <li><p>Sumana Harihareswara's round-ups of various opportunities on <a href="http://www.harihareswara.net/sumana/2014/03/06/">March 2014</a> </p></li>
                 <li><p><a href="https://www.blacksintechnology.net/jobs-board/">Blacks in Tech jobs board</a> </p></li>
