Titles should only have one captial letter

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -211,7 +211,7 @@ Outreachy eligibility results
 	{% include 'home/snippet/initial_application.html' %}
 {% else %}
 
-	<h1>Your Initial Application is Under Review</h1>
+	<h1>Your initial application is under review</h1>
 
 	<p>
 	Your initial application for an Outreachy internship was received on {{ role.application.submission_date }}.
