WIP: Remove sensitive info on initial application processing
The goal of this commit is to remove sensitive information as soon as we
process someone's initial application. This will ensure that we protect
the privacy of applicants by deleting sensitive data as soon as we are
done with it.

The sensitive information we remove is:

 - Essays about discrimination and harassment they face, and how they
   are underrepresented in the technology industry of their country
 - Gender identity
 - Race and ethnicity demographics
 - Country they will be living in during the internship
 - TODO: Reviewer comments, which may contain quotes from essays

We attempt to delete this information every time an ApplicantApproval
object goes to the APPROVED or REJECTED state.

If the ApplicantApproval goes to the PENDING state, nothing is changed.
The WITHDRAWN state is not used in the website. If an applicant asks to
withdraw their initial application, we will delete the initial
application from the website.

When an applicant finishes their initial application, we normally show
them a summary of what they've submitted. However, we need to hide
the essays, gender identity, and racial/ethnic info from applicants on
their eligibility results page.

This allows applicants to not see when we've processed their initial
application. Add a note as to why the information is missing.

Modify the view for initial application reviewers to handle this data
being deleted.

Add a test to ensure:

 - essay answers aren't visible on the eligibility results page
 - essay answers are visible to reviewers before they are deleted
 - reviewers cannot see essay answers after they have been deleted
 - TODO: check that Versions of the sensitive info are deleted
 - TODO: check that gender identity and race/ethnicity aren't visible
   and are hidden from reviewers after they have been deleted

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -100,12 +100,10 @@
 
 	<h2>Additional Information</h2>
 	<p>Pronouns: <b>{{ application.applicant.get_pronouns_display }}</b>
-	<p>Gender identity: {% if application.applicantgenderidentity %}<b>{{ application.applicantgenderidentity }}</b>{% else %} Applicant was not asked this question.{% endif %}</p>
-
-	<p>Location: <b>{% with location=application.applicant.get_city_country %}{% if location.0 %}{{ location.0}}, {% endif %}{% if location.1 %}{{ location.1 }}{% endif %}
-	{% if not location.0 and not location.1 %}Unknown{% endif %}{% endwith %}</b></p>
+	<p>Gender identity: {% if application.applicantgenderidentity %}<b>{{ application.applicantgenderidentity }}</b>{% else %} [Removed]{% endif %}</p>
+	<p>Location during internship: {% if not application.barrierstoparticipation %}[Removed]{% else %}<b>{{ application.barrierstoparticipation.country_living_in_during_internship }}</b>{% endif %}</p>
 	
-	<p>Racial or ethnic minority in the United States technology industry: {% if not application.paymenteligibility.us_national_or_permanent_resident %}Unknown; not a U.S. resident or national.{% elif application.applicantraceethnicityinformation.us_resident_demographics %}<b>Yes</b>, they're Black/African American, Hispanic/Latinx, Native American, Alaska Native, Native Hawaiian, or Pacific Islander{% else %}<b>No</b>, they're not Black/African American, Hispanic/Latinx, Native American, Alaska Native, Native Hawaiian, or Pacific Islander.{% endif %}</p>
+	<p>Racial or ethnic minority in the United States technology industry: {% if not application.paymenteligibility.us_national_or_permanent_resident %}Unknown; not a U.S. resident or national.{% elif not application.applicantraceethnicityinformation %}[Removed]{% elif application.applicantraceethnicityinformation.us_resident_demographics %}<b>Yes</b>, they're Black/African American, Hispanic/Latinx, Native American, Alaska Native, Native Hawaiian, or Pacific Islander{% else %}<b>No</b>, they're not Black/African American, Hispanic/Latinx, Native American, Alaska Native, Native Hawaiian, or Pacific Islander.{% endif %}</p>
 
 	<p>Prior experience with FOSS:</p>
 	<ul>
@@ -139,32 +137,36 @@
 
 	<h2>Essay Answers</h2>
 
-	{% for field, answer in application.barrierstoparticipation.get_original_answers %}
-	<div class="card mb-3">
-		<div class="card-header">Q{{ forloop.counter }}. {{ field.verbose_name }}</div>
-		<div class="card-body">
-			<p class="card-text"><b>A{{ forloop.counter }}. {{ answer|linebreaksbr }}</b>
-			</p>
-		</div>
-		<div class="card-footer bg-white">
-			<div class="card border-info mb-3" id="essay-accordian-{{ forloop.counter }}">
-				<div class="card-header" id="essay-tips-header">
-					<h5 class="mb-0">
-						<button class="btn btn-link" data-toggle="collapse" data-target="#essay-tips-accordion-{{ forloop.counter }}" aria-expanded="false" aria-controls="essay-tips-accordion" href="#essay-tips-accordion">- Help text</button>
-					</h5>
-				</div>
-				<div id="essay-tips-accordion-{{ forloop.counter }}" class="collapse hide" aria-labelledby="essay-tips-header" data-parent="#essay-accordian-{{ forloop.counter }}">
-					<div class="card-body">
-						<div class="card-text">
-							<p>Help text:</p> {{ field.help_text|safe }}
+	{% if not application.barrierstoparticipation %}
+		<p>The essay answers have been removed after initial application processing.</p>
+	{% else %}
+		{% for field, answer in application.barrierstoparticipation.get_original_answers %}
+		<div class="card mb-3">
+			<div class="card-header">Q{{ forloop.counter }}. {{ field.verbose_name }}</div>
+			<div class="card-body">
+				<p class="card-text">A{{ forloop.counter }}. {{ answer|linebreaksbr }}
+				</p>
+			</div>
+			<div class="card-footer bg-white">
+				<div class="card border-info mb-3" id="essay-accordian-{{ forloop.counter }}">
+					<div class="card-header" id="essay-tips-header">
+						<h5 class="mb-0">
+							<button class="btn btn-link" data-toggle="collapse" data-target="#essay-tips-accordion-{{ forloop.counter }}" aria-expanded="false" aria-controls="essay-tips-accordion" href="#essay-tips-accordion">- Help text</button>
+						</h5>
+					</div>
+					<div id="essay-tips-accordion-{{ forloop.counter }}" class="collapse hide" aria-labelledby="essay-tips-header" data-parent="#essay-accordian-{{ forloop.counter }}">
+						<div class="card-body">
+							<div class="card-text">
+								<p>Help text:</p> {{ field.help_text|safe }}
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	{% endfor %}
-	{% include 'home/snippet/applicant_review_essay_rating.html' %}
+		{% endfor %}
+		{% include 'home/snippet/applicant_review_essay_rating.html' %}
+	{% endif %}
 
 	{% include 'home/snippet/applicant_review_actions.html' %}
 {% endblock %}
